--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ header{
   align-items: center;
 }
 
-/* page content style */
+/* header style */
 .header-content ul{
   list-style-type: none;
   text-align: center;
@@ -184,6 +184,7 @@ input[value="Accedi"]{
   background-color: #fff;
 }
 
+/* jumbotron style */
 #jumbotron{
   background-image: url(../img/jumbo.png);
   background-repeat: no-repeat;
@@ -193,16 +194,20 @@ input[value="Accedi"]{
 
 #jumbotron .content{
   height: 500px;
-  padding-top: 100px;
+  padding-top: 120px;
   text-align: center;
   line-height: 1.5;
   color: #fff;
   font-size: large;
 }
 
+#jumbotron h1{
+  font-size: 50px;
+}
+
 #jumbotron p{
   font-size: 19px;
-  padding: 50px 0px 20px 0px;
+  padding: 30px 0px 20px 0px;
 }
 
 .btn{
@@ -233,4 +238,20 @@ footer hr{
 .footer-btn{
   padding: 4px 15px;
   font-size: 14px;
+}
+
+/* main style */
+.item1-text{
+  padding: 40px 100px 40px 20px;
+  line-height: 1.2;
+}
+
+h2{
+  font-size: 44px;
+}
+
+p{
+  margin-top: 20px;
+  font-size: 17px;
+  line-height: 1.8;
 }
