--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 
 /* common */
 body{
-  font-family: sans-serif;
-  font-weight: 100;
+  font-family: 'Lato';
+  font-weight: 500;
 }
 
 header{
@@ -42,6 +42,10 @@ header{
 
 .w40{
   width: 40%;
+}
+
+.w50{
+  width: 50%;
 }
 
 .w60{
@@ -259,7 +263,7 @@ input[value="Accedi"]{
 
 /* main style */
 .item-text{
-  padding: 40px;
+  padding: 38px;
   line-height: 1.2;
 }
 
@@ -340,4 +344,13 @@ li{
 
 hr{
   margin-top:30px;
+}
+
+input[value="Registrati"]{
+  width: 80px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  background-color: #5479d6;
+  padding-bottom: 3px;
 }
