--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ header{
   padding: 10px 0px;
 }
 
+a{
+  text-decoration: none;
+  color: #fff;
+}
+
 /* layout */
 .container{
   max-width: 1200px;
@@ -112,6 +117,10 @@ header{
   color: #5479d6;
 }
 
+.color-black{
+  color: #000;
+}
+
 .bg-white{
   background-color: white;
 }
@@ -122,6 +131,10 @@ header{
 
 .bg-dgrey{
   background-color: rgb(40, 40, 40);
+}
+
+.inline-block{
+  display: inline-block;
 }
 
 .d-flex{
@@ -151,12 +164,13 @@ header{
   text-align: end;
 }
 
-input[value="Accedi"]{
-  width: 80px;
-  height: 40px;
+.btn-shape{
+  padding: 8px 16px;
   border-radius: 20px;
   border: none;
   background-color: #fff;
+  color: #000;
+  text-align: center;
 }
 
 /* jumbotron style */
@@ -277,11 +291,7 @@ hr{
   margin-top:30px;
 }
 
-input[value="Registrati"]{
-  width: 80px;
-  height: 40px;
-  border-radius: 20px;
-  border: none;
+footer .btn-shape{
   background-color: #5479d6;
-  padding-bottom: 3px;
+  color: #fff;
 }
